Prevent double tap zoom on mobile

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,6 @@
+* {
+  touch-action: manipulation;
+}
 
 body {
   background: url('../resources/bcg.png');
